# zpool-rw-meter

./: Cargo.toml  LICENSE  MIGRATION_PLAN.md  README.md  clippy.toml  rustfmt.toml  zfs-cache-monitor.sh
src/: main.rs  monitor.rs
src/demo/: arcstats.txt  data.rs  mod.rs  zpool_iostat.txt  zpool_status.txt
src/display/: formatter.rs  mod.rs  progress.rs  terminal.rs
src/system/: cache.rs  commands.rs  filesystem.rs  mod.rs
src/zfs/: error.rs  integration_tests.rs  mod.rs  pools.rs  rate_calculator.rs  stats.rs  types.rs
